# baselibs_rust

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  rustfmt.toml  versions.json
.github/actions/gitlint/: action.yml
.github/setup-rust-build/: action.yml
.github/workflows/: build.yml  bzlmod-lock.yml  cargo_required.yml  copyright.yml  docs.yml  format.yml  license_check.yml  lint_clippy.yml  lint_fmt_clippy.yml  rust_coverage.yml  tests.yml
docs/: conf.py  index.rst
docs/baselibs_rust/containers_rust/: index.rst
docs/baselibs_rust/containers_rust/architecture/: index.rst
docs/baselibs_rust/containers_rust/requirements/: index.rst
docs/baselibs_rust/log/: index.rst
docs/baselibs_rust/log/detailed_design/: index.rst
examples/: BUILD
examples/log_builtin/: BUILD  Cargo.toml
examples/log_builtin/src/: main.rs
examples/log_cpp_init/: BUILD
examples/log_cpp_init/src/: example_lib.rs  main.cpp
examples/log_custom/: BUILD  Cargo.toml
examples/log_custom/src/: logger.rs  main.rs
examples/log_example/: BUILD  Cargo.toml
examples/log_example/src/: logger.rs  main.rs
examples/mw/_placeholder_example/: BUILD  Cargo.toml
examples/mw/_placeholder_example/src/: main.rs
main/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
main/_sources/module/log/: component_classification.rst.txt
main/_sources/module_docs/: index.rst.txt
main/_sources/module_docs/manual/: safety_manual.rst.txt
main/_sources/module_docs/safety_mgt/: module_safety_package_fdr.rst.txt  module_safety_plan.rst.txt  module_safety_plan_fdr.rst.txt
main/_sources/module_docs/verification/: module_verification_report.rst.txt
main/baselibs_rust/containers_rust/: index.html
main/baselibs_rust/containers_rust/architecture/: index.html
main/baselibs_rust/containers_rust/requirements/: index.html
main/baselibs_rust/log/: component_classification.html  index.html
main/baselibs_rust/log/architecture/: index.html
main/baselibs_rust/log/detailed_design/: index.html
main/baselibs_rust/log/requirements/: index.html
main/baselibs_rust/log/safety_analysis/: dfa.html  fmea.html
main/features/baselibs_rust/requirements/: index.html
main/module/log/: component_classification.html  index.html
main/module_docs/: index.html
main/module_docs/manual/: index.html  safety_manual.html
main/module_docs/release/: release_note.html
main/module_docs/safety_mgt/: index.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/module_docs/verification/: module_verification_report.html
pr-1/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
pr-1/_sources/: index.rst.txt
pr-1/module/log/: component_classification.html  index.html
pr-1/module_docs/: index.html
pr-1/module_docs/manual/: safety_manual.html
pr-1/module_docs/release/: release_note.html
pr-1/module_docs/safety_mgt/: module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
pr-1/module_docs/verification/: module_verification_report.html
pr-2/: genindex.html  needs.json  score_scl_grouped_cache.json  score_source_code_linker_cache.json  search.html  searchindex.js
pr-2/_sources/: index.rst.txt
pr-2/baselibs_rust/containers_rust/: index.html
pr-2/baselibs_rust/log/: component_classification.html  index.html
pr-2/module_docs/manual/: index.html  safety_manual.html
pr-2/module_docs/release/: release_note.html
pr-2/module_docs/safety_mgt/: index.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
pr-2/module_docs/verification/: module_verification_report.html
src/containers/: BUILD  Cargo.toml
src/containers/fixed_capacity/: mod.rs  queue.rs  string.rs  vec.rs
src/containers/generic/: queue.rs  string.rs  vec.rs
src/containers/inline/: option.rs  queue.rs  result.rs  string.rs  vec.rs
src/containers/storage/: heap.rs  inline.rs  mod.rs
src/elementary/: BUILD  Cargo.toml  allocator_traits.rs  global_allocator.rs  heap_allocator.rs  lib.rs
src/log/: BUILD  Cargo.toml
src/log/mw_log/: BUILD  Cargo.toml  README.md  __private_api.rs  lib.rs  macros.rs
src/log/mw_log/src/: __private_api.rs  lib.rs  macros.rs  serde.rs
src/log/mw_log/src/kv/: error.rs  key.rs  mod.rs  source.rs  value.rs
src/log/mw_log/test_max_level_features/: main.rs
src/log/mw_log/tests/: integration.rs  macros.rs
src/log/mw_log_fmt/: BUILD  Cargo.toml  builders.rs  fmt.rs  fmt_impl.rs  fmt_impl_qm.rs  fmt_impl_std.rs  fmt_spec.rs  lib.rs  macros.rs  test_utils.rs
src/log/mw_log_fmt_macro/: BUILD  Cargo.toml  format_args.rs  lib.rs  score_debug.rs
src/log/mw_log_macro/: BUILD  Cargo.toml  lib.rs
src/log/mw_log_macro/src/: lib.rs
src/log/mw_log_macro/tests/: test_format_args.rs
src/log/score_log/: BUILD  Cargo.toml  lib.rs  macros.rs
src/log/score_log/tests/: integration.rs  macros.rs
src/log/score_log_fmt/: BUILD  Cargo.toml  builders.rs  fmt.rs  fmt_impl.rs  fmt_spec.rs  lib.rs  macros.rs  test_utils.rs
src/log/score_log_fmt_macro/: BUILD  Cargo.toml  format_args.rs  lib.rs  score_debug.rs
src/log/score_log_fmt_macro/tests/: test_format_args.rs  test_score_debug.rs
src/log/score_log_fmt_macro/tests/utils/: mod.rs
src/log/src/: lib.rs
src/log/stdout_logger/: BUILD  Cargo.toml  lib.rs
src/log/stdout_logger_cpp_init/: BUILD  ffi.rs  stdout_logger_init.cpp  stdout_logger_init.h
src/mw/_placeholder/: BUILD  Cargo.toml  README.md
src/mw/log/: BUILD  Cargo.toml
src/mw/log/mw_log/: Cargo.toml
src/mw/log/mw_log/src/: __private_api.rs  lib.rs  macros.rs  serde.rs
src/mw/log/mw_log/tests/: integration.rs  macros.rs
src/mw/log/mw_log_fmt/: Cargo.toml
src/mw/log/mw_log_fmt/src/: fmt.rs
src/mw/log/mw_log_macro/: Cargo.toml
src/mw/log/mw_log_macro/src/: lib.rs
src/pal/: BUILD  Cargo.toml  affinity.rs  errno.rs  lib.rs
src/sync/: BUILD  Cargo.toml  arc_in.rs  lib.rs
src/thread/: BUILD  Cargo.toml  lib.rs  parameters.rs  thread.rs
tests/mw/_placeholder/: BUILD  Cargo.toml
(+69 files in other folders)
