# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[workspace]
resolver = "2"
# Split to default members without tests and examples.
# Used when executing cargo from project root.
default-members = [
    "src/containers",
    "src/log/mw_log",
    "src/log/mw_log_fmt",
    "src/log/mw_log_fmt_macro",
]
# Include tests and examples as a member for IDE support and Bazel builds.
members = [
    "src/containers",
    "src/log/mw_log",
    "src/log/mw_log_fmt",
    "src/log/mw_log_fmt_macro",
    "examples/log_example",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license-file = "LICENSE.md"
authors = ["S-CORE Contributors"]

[workspace.dependencies]
mw_log = { path = "src/log/mw_log" }
mw_log_fmt = { path = "src/log/mw_log_fmt" }
mw_log_fmt_macro = { path = "src/log/mw_log_fmt_macro" }

[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
missing_docs = "warn"
