# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[package]
name = "thread"
description = "`pthread`-based parametrizable threading module."
version = "0.1.0"
authors = ["Contributors to the Eclipse Foundation"]
edition = "2021"
license-file = "../../LICENSE.md"

[lib]
path = "lib.rs"

[dependencies]
libc.workspace = true
