# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[package]
name = "mw_log"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
mw_log_fmt.workspace = true
mw_log_fmt_macro.workspace = true

[lints]
workspace = true
