[package]
name = "mw_log_macro"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
mw_log_fmt.workspace = true

[lints]
workspace = true
