# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[package]
name = "score_log_fmt_macro"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
score_log_fmt.workspace = true

[dev-dependencies]
score_log.workspace = true

[lints]
workspace = true
