[package]
name = "mw_log"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true
description = """
A lightweight logging facade for Rust
"""

[features]
max_level_off = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []

release_max_level_off = []
release_max_level_error = []
release_max_level_warn = []
release_max_level_info = []
release_max_level_debug = []
release_max_level_trace = []

std = []
kv = []

# Not available but listed here to suppress warnings.
kv_sval = []
kv_std = []
kv_serde = []
serde = []

[dependencies]
mw_log_fmt.workspace = true
mw_log_macro.workspace = true
